--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 h1{
     text-align: center;
-    font: "Arial";
+    font-family: Arial, Helvetica, sans-serif;
 }
 .game{
     position: absolute;
@@ -36,4 +36,5 @@ h1{
     height: 30px;
     text-align: center;
     cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
