--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 h1{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 40px;
 }
 .game{
     position: absolute;
-    top: 80px;
+    top: 140px;
     transform: translate(-50%);
     width: 650px;
     left: 50%;
@@ -22,7 +23,7 @@ h1{
 .notch{
     width: 95px;
     height: 80px;
-    background: rgb(106, 128, 101);
+    background: rgb(131, 130, 130);
     border: 2px solid black;
     border-radius: 50%;
 }
@@ -32,9 +33,17 @@ h1{
     bottom: 120px;
     left: 45%;
     border: 1px solid rgb(29, 28, 28);
-    width: 100px;
-    height: 30px;
+    width: 125px;
+    height: 75px;
     text-align: center;
     cursor: pointer;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: cadetblue;
+    font-size: 22px;
+}
+.red{
+    background-color: crimson;
+}
+.black{
+    background-color: black;
 }
